# SFML-FallingSand

./: CMakeLists.txt
src/: BorderParticle.cpp  BorderParticle.h  Particle.cpp  Particle.h  SandParticle.cpp  SandParticle.h  World.cpp  World.h  main.cpp
